Fix: fp-is-overflow도 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,9 @@
   width: 100%;
   max-height: 100vh !important;
 }
+.fp-is-overflow {
+  max-height: 100vh !important;
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
